chore: Remove .DS_Store file

--- a/Google Workspace Studioの活用/workspace-studio-basics-site/index.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/index.html
@@ -627,10 +627,6 @@
                     <div class="stat-label">レッスン</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-value">60</div>
-                    <div class="stat-label">分で習得</div>
-                </div>
-                <div class="stat-item">
                     <div class="stat-value">0</div>
                     <div class="stat-label">コード不要</div>
                 </div>
@@ -686,10 +682,6 @@
                         <div class="solution-feature">
                             <div class="feature-check">✓</div>
                             <span>Gemini AIとの連携方法</span>
-                        </div>
-                        <div class="solution-feature">
-                            <div class="feature-check">✓</div>
-                            <span>60分で基礎をマスター</span>
                         </div>
                     </div>
                 </div>
@@ -810,9 +802,9 @@
                     <p>GUIだけで全て完結。プログラミング経験ゼロでもOK</p>
                 </div>
                 <div class="feature-card">
-                    <div class="feature-icon">60</div>
-                    <h3>60分で習得</h3>
-                    <p>4つのレッスンで基礎から実践まで効率的に学習</p>
+                    <div class="feature-icon">4</div>
+                    <h3>全4レッスン</h3>
+                    <p>基礎から実践まで段階的に効率よく学習</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">AI</div>
