chore: remove a file from the codebase

--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
@@ -885,9 +885,10 @@
         <div class="note">
             <div class="note-title">アカウント要件</div>
             <ul>
-                <li>Google Workspace（Business/Enterprise）アカウント</li>
-                <li>Gemini for Workspaceが有効化されていること</li>
-                <li>Studioへのアクセス権限があること</li>
+                <li>Google Workspace（Business Starter/Standard/Plus、Enterprise Standard/Plus）アカウント</li>
+                <li>またはGoogle AI Ultra for Businessアドオン</li>
+                <li>管理コンソール > 生成AI > Gemini for Workspace で有効化されていること</li>
+                <li>18歳以上のユーザーであること（18歳未満はAI機能を使用不可）</li>
             </ul>
         </div>
 
