--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson2.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson2.html
@@ -583,7 +583,7 @@
                 <div class="code-block">URL: studio.workspace.google.com</div>
                 <div class="note-box">
                     <h4>アクセスできない場合</h4>
-                    <p>管理者によってStudioが有効化されていない可能性があります。管理コンソールでの設定を確認してください。</p>
+                    <p>管理者によってStudioが有効化されていない可能性があります。管理コンソール > 生成AI > Gemini for Workspace での設定を管理者に確認してください。</p>
                 </div>
             </div>
         </div>
