--- a/Google Workspace Studioの活用/workspace-studio-basics-site/lesson1.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/lesson1.html
@@ -688,27 +688,22 @@
             <tbody>
                 <tr>
                     <td class="schedule-session">対象エディション</td>
-                    <td>Business / Enterprise / Essentials / Frontline / Education</td>
+                    <td>Business Starter / Standard / Plus、Enterprise Standard / Plus、Education Fundamentals / Standard / Plus</td>
                     <td>個人Googleアカウントは利用不可</td>
                 </tr>
                 <tr>
-                    <td class="schedule-session">Rapid Release</td>
-                    <td>2025年12月3日から段階的に展開開始</td>
-                    <td>即時リリースドメイン向け</td>
+                    <td class="schedule-session">対象アドオン</td>
+                    <td>Google AI Ultra for Business、Google AI Pro for Education</td>
+                    <td>AI機能の利用に必要な場合あり</td>
                 </tr>
                 <tr>
-                    <td class="schedule-session">Scheduled Release</td>
-                    <td>2026年1月5日以降に利用可能</td>
-                    <td>計画的リリースドメイン向け</td>
-                </tr>
-                <tr>
-                    <td class="schedule-session">言語対応</td>
-                    <td>英語のみ（日本語プロンプト入力は可能）</td>
-                    <td>公式では英語指示を推奨</td>
+                    <td class="schedule-session">年齢制限</td>
+                    <td>18歳以上のユーザーのみ</td>
+                    <td>18歳未満はAI機能を使用不可</td>
                 </tr>
                 <tr>
                     <td class="schedule-session">必要な設定</td>
-                    <td>Gemini for Workspaceの有効化</td>
+                    <td>管理コンソール > 生成AI > Gemini for Workspace で有効化</td>
                     <td>管理者がStudioの使用を許可する必要あり</td>
                 </tr>
             </tbody>
@@ -722,6 +717,11 @@
         <div class="note">
             <div class="note-title">アクセス方法</div>
             <p>Studioにアクセスするには、ブラウザで <strong>studio.workspace.google.com</strong> にアクセスします。Google Workspaceアカウントでサインインすると、「Discover」ページでテンプレート一覧が表示されます。</p>
+        </div>
+
+        <div class="note">
+            <div class="note-title">公式ドキュメント</div>
+            <p>詳細な管理者向け設定は <a href="https://support.google.com/a/answer/16704187?hl=ja" target="_blank" style="color: var(--accent-primary);">Google公式ヘルプ</a> をご確認ください。</p>
         </div>
     </section>
 
