--- a/Google Workspace Studioの活用/workspace-studio-basics-site/lesson2.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/lesson2.html
@@ -526,13 +526,23 @@
             </thead>
             <tbody>
                 <tr>
-                    <td class="schedule-session">アカウント</td>
-                    <td>Google Workspace（Business/Enterprise/Education）</td>
+                    <td class="schedule-session">対象エディション</td>
+                    <td>Business Starter / Standard / Plus、Enterprise Standard / Plus、Education Fundamentals / Standard / Plus</td>
                     <td>個人アカウント（@gmail.com）は利用不可</td>
                 </tr>
                 <tr>
+                    <td class="schedule-session">対象アドオン</td>
+                    <td>Google AI Ultra for Business、Google AI Pro for Education</td>
+                    <td>AI機能の利用に必要な場合あり</td>
+                </tr>
+                <tr>
+                    <td class="schedule-session">年齢制限</td>
+                    <td>18歳以上のユーザーのみ</td>
+                    <td>18歳未満はAI機能を使用不可</td>
+                </tr>
+                <tr>
                     <td class="schedule-session">Gemini設定</td>
-                    <td>Gemini for Workspaceが有効化されていること</td>
+                    <td>管理コンソール > 生成AI > Gemini for Workspace で有効化</td>
                     <td>AI機能テンプレートが表示されない場合は管理者に確認</td>
                 </tr>
                 <tr>
@@ -545,7 +555,8 @@
 
         <div class="note">
             <div class="note-title">管理者向け：有効化の確認方法</div>
-            <p>Google管理コンソール > アプリ > Google Workspace > Studio で有効化状況を確認できます。組織単位（OU）やグループ単位での制御も可能です。</p>
+            <p>Google管理コンソール > 生成AI > Gemini for Workspace で有効化状況を確認できます。組織単位（OU）やグループ単位での制御も可能です。</p>
+            <p style="margin-top: 0.5rem;"><a href="https://support.google.com/a/answer/16704187?hl=ja" target="_blank" style="color: var(--accent-primary);">公式ドキュメント: Workspace Studioの利用要件</a></p>
         </div>
     </section>
 
