--- a/Google Workspace Studioの活用/workspace-studio-basics-site/lesson4.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/lesson4.html
@@ -654,9 +654,18 @@
         <div class="phase-card">
             <div class="phase-header">
                 <div class="phase-number">03</div>
+                <div class="phase-title">利用条件と年齢制限</div>
+            </div>
+            <p>Workspace Studioは、Business Starter/Standard/Plus、Enterprise Standard/Plus、Education Fundamentals/Standard/Plus エディション、またはGoogle AI Ultra for Business / Google AI Pro for Educationアドオンが必要です。<strong>18歳未満のユーザーはAI機能を使用できません。</strong></p>
+        </div>
+
+        <div class="phase-card">
+            <div class="phase-header">
+                <div class="phase-number">04</div>
                 <div class="phase-title">管理者の制御</div>
             </div>
-            <p>管理者はGoogle管理コンソールから、Studioの有効化/無効化、OU/グループ単位でのアクセス制御、外部連携の許可/制限、監査ログの確認が可能です。</p>
+            <p>管理者はGoogle管理コンソール > 生成AI > Gemini for Workspace から、Studioの有効化/無効化、OU/グループ単位でのアクセス制御、外部連携の許可/制限、監査ログの確認が可能です。</p>
+            <p style="margin-top: 0.5rem;"><a href="https://support.google.com/a/answer/16703803?hl=ja" target="_blank" style="color: var(--accent-primary);">公式ドキュメント: Workspace Studioの管理</a></p>
         </div>
 
         <div class="success">
