docs: Update lesson content for recruitment and zero-touch management sites.

--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson1.html
@@ -904,7 +904,7 @@
                 <li><strong>重要顧客リスト</strong>：キーアカウントのメールアドレスまたはドメインをリスト化（例：@a-corp.co.jp, @b-inc.com）</li>
                 <li><strong>案件ステージ定義</strong>：問い合わせ/提案中/見積もり/契約交渉/受注/失注の判定基準を整理</li>
                 <li><strong>監視キーワード</strong>：「提案書」「見積もり」「契約」「期限」など、自社で使う営業キーワードをリストアップ</li>
-                <li><strong>通知先Chatスペース</strong>：エージェントからの通知を受け取るGoogle Chatスペースを作成</li>
+                <li><strong>Google Chat</strong>：エージェントからのDM通知を受け取れるように確認（※スペースへの投稿機能は削除されました）</li>
                 <li><strong>営業資料フォルダ</strong>：Google Driveに案件資料を保存するための親フォルダを作成</li>
                 <li><strong>アクセス確認</strong>：studio.workspace.google.com にアクセスできるか確認</li>
             </ul>
