--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson2.html
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/sales-pipeline-automation-site/lesson2.html
@@ -647,11 +647,11 @@ newer_than:1d is:unread from:(@a-corp.co.jp OR @b-inc.com OR @c-group.jp)</div>
                 <h3 class="step-title">Chat通知ステップ</h3>
                 <p class="step-description">要約結果をGoogle Chatに送信します。「Add step」から「Google Chat - Send message」を選択します。</p>
                 <div class="highlight-box">
-                    <h4>通知先の選択</h4>
+                    <h4>通知先について</h4>
                     <ul>
-                        <li><strong>個人DM</strong>：自分だけに通知</li>
-                        <li><strong>Chatスペース</strong>：チーム全体に共有</li>
+                        <li><strong>個人DM</strong>：自分自身へのDM通知</li>
                     </ul>
+                    <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 0.5rem;">※ Chatスペースへの投稿機能は正式リリースで削除されました</p>
                 </div>
                 <div class="code-block">📬 本日の見込み顧客メール要約
 
@@ -752,7 +752,7 @@ If there are no emails, respond with:
 
         <div class="warning-box">
             <h4>テスト時の注意点</h4>
-            <p>テスト実行時は実際にChatに通知が送信されます。テスト用のChatスペースを用意するか、自分へのDMで確認することをお勧めします。</p>
+            <p>テスト実行時は実際にGoogle ChatのDMに通知が送信されます。</p>
         </div>
 
         <h3 style="margin-top: 2rem;">Before / After</h3>
