--- a/Google Workspace Studioの活用/workspace-studio-basics-site/lesson2.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/lesson2.html
@@ -624,7 +624,8 @@
             </li>
             <li>
                 <div class="step-title">通知ステップの確認</div>
-                <p>「Notify me in Chat」ステップで、通知先（自分自身 or スペース）とメッセージ内容を確認します。変数を使ってGeminiの要約を含めます。</p>
+                <p>「チャットで通知する」ステップで、自分自身へのDM通知を設定します。変数を使ってGeminiの要約を含めます。</p>
+                <p style="font-size: 0.85rem; color: var(--text-muted); margin-top: 0.5rem;">※ Chatスペースへの投稿機能は正式リリースで削除されました</p>
             </li>
             <li>
                 <div class="step-title">保存と有効化</div>
@@ -670,7 +671,7 @@ Please summarize in Japanese.</div>
             <div class="warning-title">よくあるエラーと対処法</div>
             <ul>
                 <li><strong>Gmailアクセスエラー</strong>：Gmailへのアクセス権限を確認</li>
-                <li><strong>Chat投稿エラー</strong>：Chatスペースへの投稿権限を確認</li>
+                <li><strong>Chat通知エラー</strong>：Google ChatへのDM通知権限を確認</li>
                 <li><strong>Geminiエラー</strong>：プロンプトを簡潔にして再試行</li>
                 <li><strong>タイムアウト</strong>：処理対象を絞り込んで再試行</li>
             </ul>
