--- a/Google Workspace Studioの活用/workspace-studio-basics-site/lesson3.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/lesson3.html
@@ -636,51 +636,114 @@
 
     <section class="section" id="gemini">
         <div class="section-header">
-            <div class="section-label">Gemini Steps</div>
-            <h2 class="section-title">Geminiステップの活用</h2>
+            <div class="section-label">AI Skills & Tools</div>
+            <h2 class="section-title">AIスキルとツール：Studioの真の強み</h2>
         </div>
 
-        <div class="grid grid-4">
+        <div class="feature-highlight">
+            <h3>Studioの差別化ポイント</h3>
+            <p>Chatスペース投稿やWebhookが削除されましたが、Studioの真の価値は<strong>AIスキル</strong>と<strong>ツール</strong>にあります。これらを組み合わせることで、他のノーコードツールでは実現できない高度な自動化が可能です。</p>
+        </div>
+
+        <h3 style="margin-top: 2rem; margin-bottom: 1rem;">AIスキル（AI Skills）</h3>
+        <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">特定のタスクに最適化されたAI機能。「Geminiに聞く」よりも高精度・高速に処理できます。</p>
+
+        <div class="grid grid-2">
             <div class="card">
-                <div class="card-number">01</div>
-                <h3 class="card-title">要約・抽出</h3>
+                <div class="card-number" style="background: linear-gradient(135deg, #8b5cf6 0%, #6366f1 100%);">1</div>
+                <h3 class="card-title">未読メールを要約する（Recap unread emails）</h3>
                 <p class="card-description">
-                    ドキュメント要約、メール要点抽出、議事録作成、アクションアイテム抽出
+                    指定期間の未読メールを自動で要約。送信者、件名、重要ポイントを抽出してリスト化。毎朝の受信トレイチェックを数秒に短縮。
                 </p>
+                <div style="background: var(--bg-secondary); padding: 1rem; border-radius: 8px; margin-top: 1rem; font-size: 0.9rem;">
+                    <strong>活用例：</strong>毎朝9時に「過去24時間の未読メール」を要約→DM通知
+                </div>
             </div>
 
             <div class="card">
-                <div class="card-number">02</div>
-                <h3 class="card-title">分析・分類</h3>
+                <div class="card-number" style="background: linear-gradient(135deg, #8b5cf6 0%, #6366f1 100%);">2</div>
+                <h3 class="card-title">抽出する（Extract）</h3>
                 <p class="card-description">
-                    感情分析、カテゴリ分類、優先順位付け、トピック識別
+                    テキストから特定の情報を抽出。日付、金額、名前、アクションアイテムなど、構造化データとして取り出せます。
                 </p>
+                <div style="background: var(--bg-secondary); padding: 1rem; border-radius: 8px; margin-top: 1rem; font-size: 0.9rem;">
+                    <strong>活用例：</strong>請求書メールから「金額」「支払期日」「取引先名」を抽出→Sheetsに自動記録
+                </div>
             </div>
 
             <div class="card">
-                <div class="card-number">03</div>
-                <h3 class="card-title">コンテンツ生成</h3>
+                <div class="card-number" style="background: linear-gradient(135deg, #8b5cf6 0%, #6366f1 100%);">3</div>
+                <h3 class="card-title">決める（Decide）</h3>
                 <p class="card-description">
-                    メール返信下書き、ドキュメント作成、レポート生成、翻訳
+                    AI判断による自動分岐。「緊急/通常/低優先」「承認/要確認/却下」など、定義した基準でコンテンツを分類・判定します。
                 </p>
+                <div style="background: var(--bg-secondary); padding: 1rem; border-radius: 8px; margin-top: 1rem; font-size: 0.9rem;">
+                    <strong>活用例：</strong>問い合わせメールを「クレーム/質問/依頼」に分類→それぞれ異なるラベルを付与
+                </div>
             </div>
 
             <div class="card">
-                <div class="card-number">04</div>
-                <h3 class="card-title">意思決定支援</h3>
+                <div class="card-number" style="background: linear-gradient(135deg, #8b5cf6 0%, #6366f1 100%);">4</div>
+                <h3 class="card-title">要約（Summarize）</h3>
                 <p class="card-description">
-                    条件判断、次のアクション提案、推奨事項の提示
+                    ドキュメント、メールスレッド、長文テキストを簡潔に要約。箇条書き、段落、指定文字数など、出力形式を柔軟に設定可能。
                 </p>
+                <div style="background: var(--bg-secondary); padding: 1rem; border-radius: 8px; margin-top: 1rem; font-size: 0.9rem;">
+                    <strong>活用例：</strong>Driveにアップされた報告書を3行で要約→DM通知
+                </div>
             </div>
         </div>
 
-        <div class="note">
+        <h3 style="margin-top: 3rem; margin-bottom: 1rem;">ツール（Tools）</h3>
+        <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">データの絞り込みや条件分岐を行うための機能。AIスキルと組み合わせて使います。</p>
+
+        <div class="grid grid-2">
+            <div class="card">
+                <div class="card-number" style="background: linear-gradient(135deg, #0891b2 0%, #06b6d4 100%);">A</div>
+                <h3 class="card-title">チェックする（Check）</h3>
+                <p class="card-description">
+                    条件に基づいてYES/NO判定。「金額が10万円以上か」「期限が今週中か」など、明確な条件でフローを分岐させます。
+                </p>
+                <div style="background: var(--bg-secondary); padding: 1rem; border-radius: 8px; margin-top: 1rem; font-size: 0.9rem;">
+                    <strong>組み合わせ例：</strong>「抽出する」で金額取得→「チェックする」で10万円以上か判定→高額のみラベル付与
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card-number" style="background: linear-gradient(135deg, #0891b2 0%, #06b6d4 100%);">B</div>
+                <h3 class="card-title">フィルター（Filter）</h3>
+                <p class="card-description">
+                    複数のアイテムから条件に合うものだけを絞り込み。「未完了のタスクのみ」「特定ラベルのメールのみ」など、処理対象を限定。
+                </p>
+                <div style="background: var(--bg-secondary); padding: 1rem; border-radius: 8px; margin-top: 1rem; font-size: 0.9rem;">
+                    <strong>組み合わせ例：</strong>「未読メールを要約」→「フィルター」で重要顧客からのみ抽出→要約をDM通知
+                </div>
+            </div>
+        </div>
+
+        <h3 style="margin-top: 3rem; margin-bottom: 1rem;">AIエージェント：Geminiに聞く</h3>
+        <div class="card" style="border: 2px solid var(--accent-primary);">
+            <h3 class="card-title" style="color: var(--accent-primary);">自由形式でGeminiに指示</h3>
+            <p class="card-description">
+                上記のAIスキルで対応できない複雑なタスクには「Geminiに聞く」を使用。自然言語でプロンプトを書いて、柔軟な処理が可能です。
+            </p>
+        </div>
+
+        <div class="note" style="margin-top: 2rem;">
             <div class="note-title">効果的なプロンプトのコツ</div>
             <ul>
                 <li><strong>具体的に指示</strong>：「要約して」→「3つの箇条書きで要約して」</li>
                 <li><strong>出力形式を指定</strong>：「以下の形式で出力して」</li>
                 <li><strong>言語を指定</strong>：「日本語で回答して」または「Please respond in Japanese.」</li>
                 <li><strong>条件を明確に</strong>：「緊急のものは先頭に」</li>
+            </ul>
+        </div>
+
+        <div class="warning" style="margin-top: 2rem;">
+            <div class="warning-title">AIスキル vs Geminiに聞く：使い分け</div>
+            <ul>
+                <li><strong>AIスキルを優先</strong>：「未読メール要約」「抽出」「決める」「要約」で対応できるならAIスキルを使用（高速・高精度）</li>
+                <li><strong>Geminiに聞くを使う場面</strong>：複雑な判断、カスタムフォーマット出力、複数タスクの組み合わせが必要な場合</li>
             </ul>
         </div>
     </section>
@@ -695,11 +758,12 @@
             <div class="integration-item">Asana</div>
             <div class="integration-item">Jira</div>
             <div class="integration-item">Mailchimp</div>
-            <div class="integration-item">Salesforce</div>
-            <div class="integration-item">Slack *</div>
-            <div class="integration-item">Teams *</div>
+            <div class="integration-item">Salesforce [α版]</div>
+            <div class="integration-item">HubSpot [α版]</div>
+            <div class="integration-item">Confluence</div>
+            <div class="integration-item">QuickBooks</div>
         </div>
-        <p style="font-size: 0.85rem; color: var(--text-muted);">* Webhook経由での連携</p>
+        <p style="font-size: 0.85rem; color: var(--text-muted);">※ Webhook連携（Slack/Teams等）は正式リリースで削除されました</p>
 
         <div class="grid grid-2" style="margin-top: 2rem;">
             <div class="case-study">
