--- a/Google Workspace Studioの活用/workspace-studio-basics-site/lesson4.html
+++ b/Google Workspace Studioの活用/workspace-studio-basics-site/lesson4.html
@@ -699,8 +699,8 @@
 
         <div class="troubleshoot-item">
             <div class="troubleshoot-title">トラブル3：Chat通知が届かない</div>
-            <div class="troubleshoot-cause"><strong>原因：</strong>Chatスペースへのアクセス権限がない、スペースIDの設定ミス、Chatアプリが無効化</div>
-            <div class="troubleshoot-solution"><strong>対処法：</strong>Chatスペースのメンバーシップを確認 → スペースを再選択 → 管理者にChatの設定を確認</div>
+            <div class="troubleshoot-cause"><strong>原因：</strong>Google Chatが無効化されている、DM通知の権限がない</div>
+            <div class="troubleshoot-solution"><strong>対処法：</strong>Google Chatアプリを確認 → 管理者にChatの設定を確認（※Chatスペースへの投稿機能は正式リリースで削除されました）</div>
         </div>
 
         <div class="troubleshoot-item">
