--- a/cx-recruitment-operation-site/lesson1.html
+++ b/cx-recruitment-operation-site/lesson1.html
@@ -742,7 +742,7 @@
                 <li>Google Workspaceアカウント（Business Standard以上推奨）</li>
                 <li>候補者管理スプレッドシート（下記構成で作成）</li>
                 <li>履歴書保存用Google Driveフォルダ</li>
-                <li>採用チーム用Google Chatスペース</li>
+                <li>Google Chat（DM通知用） ※スペースへの投稿機能は削除されました</li>
                 <li>面接用Googleカレンダー</li>
                 <li>面接評価シート（Googleフォーム）</li>
             </ul>
