--- a/cx-recruitment-operation-site/lesson3.html
+++ b/cx-recruitment-operation-site/lesson3.html
@@ -581,7 +581,7 @@
                 <div class="step-number">6</div>
                 <div class="step-content">
                     <h3>Chat 結果共有</h3>
-                    <p>「Add step」→「Send Chat message」→ 採用チームスペースに面接結果速報を通知</p>
+                    <p>「Add step」→「チャットで通知する」→ 自分へのDMで面接結果速報を受信 ※スペースへの投稿機能は削除されました</p>
                 </div>
             </div>
             <div class="step-item">
@@ -1014,7 +1014,7 @@ Output in Japanese.</div>
             <div class="point-card">
                 <div class="point-number">POINT 03</div>
                 <h3>プライバシー配慮</h3>
-                <p>評価内容は採用チーム内のみで共有。Chatスペースへのアクセス権限を適切に設定すること</p>
+                <p>評価内容は採用チーム内のみで共有。DM通知で受け取った情報の取り扱いに注意すること</p>
             </div>
             <div class="point-card">
                 <div class="point-number">POINT 04</div>
