--- a/zero-touch-management-site/lesson2.html
+++ b/zero-touch-management-site/lesson2.html
@@ -739,7 +739,7 @@
                     <div class="step-number">4</div>
                     <div class="step-content">
                         <h3>Chat送信アクション設定</h3>
-                        <p>Action: Send Chat message → Space: 管理者用スペース → Format: 下記のChat通知テンプレートを使用</p>
+                        <p>Action: チャットで通知する → 自分へのDM通知 → Format: 下記のChat通知テンプレートを使用 ※スペースへの投稿機能は削除されました</p>
                     </div>
                 </div>
                 <div class="step-item">
