--- a/zero-touch-management-site/lesson3.html
+++ b/zero-touch-management-site/lesson3.html
@@ -784,7 +784,7 @@
                     <div class="step-number">6</div>
                     <div class="step-content">
                         <h3>Sheets・Chat出力設定</h3>
-                        <p>Sheets: ステータス列を更新（承認済/要修正/再提出）。Chat: RESSUBMITの場合のみ管理者スペースに通知</p>
+                        <p>Sheets: ステータス列を更新（承認済/要修正/再提出）。Chat: RESSUBMITの場合のみDM通知 ※スペースへの投稿機能は削除されました</p>
                     </div>
                 </div>
             </div>
